k3s/sol/components/longhorn/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress-lan
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  tls:
    secretName: longhorn-localhost-tls
  routes:
    - match: Host(`longhorn.localhost`)
      kind: Rule
      middlewares:
        - name: lan-whitelist
          namespace: base
        - name: basicauth-localhost
          namespace: base
      services:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress-domain
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  tls:
    secretName: longhorn-prod-tls
  routes:
    - match: Host(`longhorn.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: geoblock
          namespace: base
        - name: crowdsec-bouncer
          namespace: base
        - name: forwardauth-authelia
          namespace: base
      services:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
